package diagramaIphone;

public class iPhone {
    public static void main(String[] args) {
        System.out.println("Welcome to your iPhone!");
    }
}